trustfall_core/src/resources/test_data/valid_queries/coercion_on_optional_edge.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 6) {
        value @output

        predecessor @optional {
            ... on Prime {
                prime: value @output
            }
        }
    }
}"#,
    arguments: {},
)
