trustfall_core/src/resources/test_data/parse_errors/nested_type_coercion.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 10) {
        value @output

        successor {
            ... on Prime {
                ... on Number {
                    prime: value @output
                }
            }
        }
    }
}"#,
    arguments: {},
)
